test/unique/neg/capture-lhs-not-accessible.check
capture-lhs-not-accessible.scala:11: error: capability of first argument not available
    capture(x, y)
           ^
one error found
